--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -252,7 +252,7 @@ if (localStorage.getItem('cookieConsentAccepted')) {
  
         while ((match = codeblock.exec(texat)) !== null) {
         
-        texat = await texat.replace(codeblock, `<textarea style="width: 90%; height: auto; margin: 0 auto; color: white;" disabled>${(match[2]).trim().replace(/\n/g, '*:*nl*:*')}</textarea>`)
+        texat = await texat.replace(codeblock, `<textarea style="width: 90%; height: 500px; margin: 0 auto; color: white;" disabled>${(match[2]).trim().replace(/\n/g, '*:*nl*:*')}</textarea>`)
     }  
    editor.innerHTML = `${texat.replace(/\n/g, "<br>").replace(/\*\:\*nl\*\:\*/g, "\n")}`;
    }
