--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -180,7 +180,7 @@
     <p>This website uses cookies for ad personalization and to enhance your browsing experience.</p>
     <button id="accept-cookies">Accept</button>
     </div>
-  https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script>
     hljs.highlightAll();
     var btn = document.querySelector("#genbtn");
