--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -175,9 +175,8 @@ your output will show here
     <button id="accept-cookies">Accept</button>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-  
-  <script type="module">
-    import { marked } from "https://cdn.jsdelivr.net/npm/marked/lib/marked.esm.js";
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script>
   
     hljs.highlightAll();
     var btn = document.querySelector("#genbtn");
