--- a/tools/code-generator-ai/new/beta/index.html
+++ b/tools/code-generator-ai/new/beta/index.html
@@ -70,10 +70,10 @@
         background-color: cyan;  /*cyan*/
   }
 }
-  }
-    a {
-      color: gold;
-      text-shadow: 0.5px 0.5px pink;
+    p a {
+      color: red;
+font-weight: 600;
+text-shadow: 0.5px 0.5px purple;
     }
 </style>
   
