--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -7,8 +7,8 @@
   <title>Free AI code generator : generate code using AI Without Login• Tool Sphere</title>
   <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
  <meta name="keywords" content="AI code generator, code generation tool, programming language generator, automatic code creation, code automation, text-to-code, code snippet generator, coding assistant, development tools, machine learning code, programming utilities, code optimization, code suggestions, programming productivity, software development, coding efficiency, online coding tool, syntax error-free code, programming assistance, AI code generator without login, code generator without login, no api ke required, replit ghost writer api, code writer api, code generator api, ai code generator api, free, no key required, no login required, no api token required, free code generator for all, free ai code generator, ai code generator tools, ai to generate code, ai code generator c, free ai python code generators, ai java code generator, ai js code generator, online ai code generator, ai code generator online, program generator ai online without login, AI code generator, automated code generation, code generation tool, AI programming, AI developer tools, machine learning code, AI-powered software development, code automation, boost productivity, generate code in multiple languages (list specific languages), create custom code templates, train AI models on code datasets, integrate with popular IDEs, generate code from natural language descriptions, debug and optimize generated code, support for web development, mobile development, data science, save time on coding tasks, reduce errors and bugs, improve code quality, accelerate development process, create innovative applications, make coding accessible to non-programmers, developers, programmers, software engineers, data scientists, startups, businesses, students, educators, how to generate code with AI, best AI code generator for Python, create web apps with AI code generation, automate code testing with AI, use AI to write code faster, AI code generation for beginners">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
-  <link href="/Etheme.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -20,10 +20,8 @@
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
   <link rel="canonical" href="https://tool-sphere.github.io/" />
-<!---<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>--->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-<style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/xt256.min.css">
+  <style>
   .loading {
   height: 50px;
   display: flex;
@@ -72,9 +70,13 @@
         background-color: cyan;  /*cyan*/
   }
 }
-  }
+    p a {
+      color: red;
+font-weight: 600;
+text-shadow: 0.5px 0.5px purple;
+    }
 </style>
- <!--- <script type='text/javascript' src='//pl22229512.toprevenuegate.com/7a/25/b8/7a25b8f7f637f7e331f04eb59840ff3d.js'></script>--->
+  
 </head>
 
 <body>
@@ -108,7 +110,7 @@
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>AI code generator : generate code using AI in any language Without Login</h1>
-  <h3 style="color:cyan;">🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3>
+  <h3 style="color:cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖</h3>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -117,24 +119,26 @@
 <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Your Prompt: </span>
   <textarea maxlength="1000" placeholder="Enter What You want to Generate" id="prmpt" style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
- <a style="color: cyan; font-size: 28px;" href="https://tool-sphere.github.io/tools/code-generator-ai/new/beta/" target="_blank">Use New 1000 X powerfull Model (⚠️ Beta ⚠️)</a>
+  <button onclick="window.location.href='https://tool-sphere.github.io/tools/code-generator-ai/old/'">🔙 Back to Old Model ( Not Recommended! )</button>
   <button id="genbtn" onclick="generate()" style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
     box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
   GENERATE CODE  
   </button>
-  <h3 style="color: cyan;">🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h3>
+  <h3 style="color: cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖</h3>
 </div>
 <br>
-
-  <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 3em; margin-bottom: 7px;"> Generated Code: </span>
-  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid #00f541; border-radius: 4px; display: flex;">
+ <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid #00f541; border-radius: 4px; display: flex;">
     <span id="bang" style="display: block; font-size: 22px; color: #00f541; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Generate Your Code now</span> <br>
     
   </div>
-<div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
+<div id="editor" class="" style="border: 0.5px solid yellow; width: 90%; margin: 0 auto; height: 90%; padding: 6px; border-radius: 12px; overflow: auto;">
+your output will show here 
+</pre>
+  
+</div>
 
 
-<h2>Our AI tool helps you generate code from your prompt without any api key ir login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
+<h2>Our AI tool helps you generate code from your prompt without any api key or login required, a process also known as Text-to-Code. Our AI can generate code in most languages, and you can also debug your code using our tool.</h2>
 
 <!--- FAQ --->
 
@@ -172,12 +176,16 @@
     <p>This website uses cookies for ad personalization and to enhance your browsing experience.</p>
     <button id="accept-cookies">Accept</button>
     </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script>
+  
+    hljs.highlightAll();
     var btn = document.querySelector("#genbtn");
     var prompt_ = document.querySelector("#prmpt");
     var gcode = document.querySelector("#gcode");
-    var editor = ace.edit("editor");
-editor.setReadOnly(true);
+  //  var editor = ace.edit("editor");
+//editor.setReadOnly(true);
     var gh = document.querySelector("#bang");
     function generate(){
       if(!prompt_.value || prompt_.value.trim() === ""){
@@ -185,33 +193,45 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "<strong><h4 style='color: cyan;'>🥳 A new 1000 X Better Model is comming in this site to generate and explain code with more features</h4></strong> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h4 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel and check our other cool tools all are free of cost and no ads in the website 🥳 enjoy</h4>";
+      gh.innerHTML = "<strong><h4 style='color: cyan;'>🥳 Updated ✓ with 1000 X powerfull model 🤖</h4></strong> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h4 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel and check our other cool tools all are free of cost and no ads in the website 🥳 enjoy</h4>";
     prompt_.disabled = true;
     btn.disabled = true;
-      editor.setValue();
+   //   editor.setValue();
       setTimeout(() => {
     gcode.scrollIntoView({
   behavior: "smooth",
   block: "center",  
 });
       }, 200);
-      editor.setReadOnly(true);
-fetch(`https://tool-sphere.onrender.com/api/code-gen?q=${document.querySelector("#prmpt").value}`).then(json => json.json()).then(async dy => {
- var langtoset = detectLanguage(dy.result.data[0]);
-  if(langtoset){
-   editor.session.setMode(`ace/mode/${langtoset}`);
-  }  
-  editor.setValue(dy.result.data[0]);
+    //  editor.setReadOnly(true);
+fetch("https://estatic-node-api.onrender.com/tool-sphere/api/code-gen", {
+    method: "POST",
+    headers: {
+        "Content-Type": "application/json"
+    },
+    body: JSON.stringify({query: prompt_.value})
+})
+.then(response => {
+    if (response.ok) {
+        return response.json();
+    } else {
+        throw new Error('Request failed');
+    }
+})
+.then(data => {
+  editor.innerHTML = marked.parse(`${data.msg.replace(/<\|im_end\|>\s*$/, "")}`);
+  hljs.highlightAll(); 
   prompt_.disabled = false;
   btn.disabled = false;
-  gh.innerHTML = "Your Code Generated Successfully ✅ <br> Not Getting satisfying result?, dont worry We are going to add a new model in this site for free which is 1000 X more powerful and can generate code with explanation and you can also debug your code ✓; New model comming soon 🥳, but now go and check our other tools in nav bar";
-  editor.setReadOnly(false);
+  gh.innerHTML = "Your Code Generated Successfully ✅ ";
+  //editor.setReadOnly(false);
   gcode.scrollIntoView({
   behavior: "smooth",
   block: "center",  
 });
 });
     }
+
 function detectLanguage(code) {
     var result = hljs.highlightAuto(code);
     return result.language;
@@ -229,9 +249,9 @@ acceptButton.addEventListener('click', () => {
 if (localStorage.getItem('cookieConsentAccepted')) {
   cookieConsent.style.display = 'none';
   }
+
   </script>
-  <!---<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
-     crossorigin="anonymous"></script>--->
+  <script src="./new/beta/highlighter_identifier.js" defer></script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
