--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -110,7 +110,7 @@ text-shadow: 0.5px 0.5px purple;
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
 <h1>AI code generator : generate code using AI in any language Without Login</h1>
-  <h3 style="color:cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖</h3>
+  <h3 style="color:cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖 | now you can also chat with this AI</h3>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">AI</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -124,7 +124,6 @@ text-shadow: 0.5px 0.5px purple;
     box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
   GENERATE CODE  
   </button>
-  <h3 style="color: cyan;">🥳 Updated ✓ with 1000 X powerfull model 🤖</h3>
 </div>
 <br>
  <div id="gcode" style="margin-top: 10px; margin: 0 auto; width: 100%; border: 1px solid #00f541; border-radius: 4px; display: flex;">
@@ -193,7 +192,7 @@ prompt_.focus();
         return;
       };
       prompt_.blur();
-      gh.innerHTML = "<strong><h4 style='color: cyan;'>🥳 Updated ✓ with 1000 X powerfull model 🤖</h4></strong> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab this process can take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code... <br> <h4 style='color: cyan;'>More tools Added ✓ have you tried? Open Nav Panel and check our other cool tools all are free of cost and no ads in the website 🥳 enjoy</h4>";
+      gh.innerHTML = "<strong><h4 style='color: cyan;'>🥳 Updated ✓ with 1000 X powerfull model 🤖 | now you can also chat with this AI</h4></strong> GENERATING YOUR CODE.. <!---<br> Try Our <strong><a href='https://rapidapi.com/sujoyk211/api/mail-sender-api1/' target='_blank'>MAIL SENDER API</a> </strong> To send Email (HTML / TEXT) messages for free * No Credit Card Required 100% free <br> API LINK: https://rapidapi.com/sujoyk211/api/mail-sender-api1/ ---> Please Dont close the tab sometimes this process may take upto 10 seconds Please Be patient <div style='margin-top: 3px;' class='loading'><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div><div class='obj'></div></div> Dont Close The window! <br> Generating Best Code For you, And Applying Beauty To your code...";
     prompt_.disabled = true;
     btn.disabled = true;
    //   editor.setValue();
