--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -75,6 +75,12 @@
 font-weight: 600;
 text-shadow: 0.5px 0.5px purple;
     }
+    p code {
+      color: white; box-shadow: inset 0px 0px 10px 10px black; border-radius: 4px; padding: 2px;
+    }
+    pre code {
+      border-radius: 6px;
+    }
 </style>
   
 </head>
