--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -257,6 +257,7 @@ if (localStorage.getItem('cookieConsentAccepted')) {
 
   </script>
   <script src="./new/beta/highlighter_identifier.js" defer></script>
+  <script src="./text_suggestion.js" defer></script>
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
