--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -123,7 +123,7 @@ text-shadow: 0.5px 0.5px purple;
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
 <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Your Prompt: </span>
-  <textarea maxlength="1000" placeholder="𝙒𝙧𝙞𝙩𝙚 𝙒𝙝𝙖𝙩 𝙔𝙤𝙪 𝙒𝙖𝙣𝙩 𝙏𝙤 𝙂𝙚𝙣𝙚𝙧𝙖𝙩𝙚 \n\n𝘾𝙡𝙞𝙘𝙠 𝙏𝙤 𝙂𝙚𝙩 𝙎𝙤𝙢𝙚 𝙎𝙪𝙜𝙜𝙚𝙨𝙩𝙞𝙤𝙣" id="prmpt" style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+  <textarea maxlength="1000" placeholder="𝙒𝙧𝙞𝙩𝙚 𝙒𝙝𝙖𝙩 𝙔𝙤𝙪 𝙒𝙖𝙣𝙩 𝙏𝙤 𝙂𝙚𝙣𝙚𝙧𝙖𝙩𝙚 <br><br> 𝘾𝙡𝙞𝙘𝙠 𝙏𝙤 𝙂𝙚𝙩 𝙎𝙤𝙢𝙚 𝙎𝙪𝙜𝙜𝙚𝙨𝙩𝙞𝙤𝙣" id="prmpt" style="margin-top: 4px; width: 90%; height: 200px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
   <button onclick="window.location.href='https://tool-sphere.github.io/tools/code-generator-ai/old/'">🔙 Back to Old Model ( Not Recommended! )</button>
   <button id="genbtn" onclick="generate()" style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
