--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -73,13 +73,16 @@
     p a, ol li a, ul li a {
       color: red;
 font-weight: 600;
-text-shadow: 0.5px 0.5px purple;
+text-shadow: 0.5px 0.5px 0px purple;
     }
     p code {
       color: white; box-shadow: inset 0px 0px 10px 10px black; border-radius: 4px; padding: 2px;
     }
     pre code {
       border-radius: 6px;
+    }
+    pre code, pre code span {
+      text-shadow: 2px 2px 2px currentColor;
     }
 </style>
   
