--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -46,8 +46,8 @@
     <h1>Contact Us - Tool Sphere</h1>
 
     <div class="contact-info">
-        <p>Email: <a href="mailto:sujoyk211@gmail.com">sujoyk211@gmail.com</a></p>
-        <p>Telegram Username: <a href="https://t.me/crystalSujoy">crystalSujoy</a></p>
+        <p>Email: <a href="mailto:info@smartmail.store">info@smartmail.store</a></p>
+        <p>Telegram Username: <a href= “insert”</a></p>
     </div>
 
     <h2>Reach Out to Us</h2>
